API: Add more returns
